--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -37,8 +37,7 @@
         console.log(this.responseText);
       }
 
-      function getWeather(position)
-      {
+      function getWeather(position){
           var oReq = new XMLHttpRequest();
           oReq.addEventListener("load", reqListener);
           oReq.open("GET", "http://localhost/weather?long=" + position.coords.longitude + "&lat=" + position.coords.latitude);
@@ -52,11 +51,12 @@
 
     <header>
       <div class="container">
-        <h1 class="logo">Flask App</h1>
+        <h1 class="logo"><a href = "{{url_for('home')}}">Flask App</a></h1>
       </div>
       <strong><nav>
         <ul class = "menu">
-          <li><a href = "{{url_for('home')}}">Home</a></li>
+          <li><a href="{{url_for('weather')}}">Weather</a></li>
+          <!-- <li><a href = "{{url_for('home')}}">Home</a></li> -->
           <li><a href = "{{url_for('about')}}">About</a></li>
         </ul>
       </nav></strong>
