--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask App</title>
+    <title>Whether App</title>
     <strong><link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"></strong>
     <script>
       function geoFindMe() {
@@ -51,7 +51,7 @@
 
     <header>
       <div class="container">
-        <h1 class="logo"><a href = "{{url_for('home')}}">Flask App</a></h1>
+        <h1 class="logo"><a href = "{{url_for('home')}}">Whether App</a></h1>
       </div>
       <strong><nav>
         <ul class = "menu">
